# ResourceCalc001

./: .gitignore  CHANGELOG.md  README.md  SHARING.md  pyproject.toml  setup.cfg  share.bat  share.sh  vercel.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-portal.yml
doc/: DESIGN.md  REQUIREMENTS.md  demo-presentation.html  requirements.txt
portal/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
portal/src/: main.tsx  styles.css
portal/src/calc/: logic.ts
portal/src/config/: ConfigurationLoader.ts  performance-coefficients.json
portal/src/ui/: App.tsx  ConfigurationDisplay.tsx  Results.tsx  ScenarioForm.tsx
portal/src/utils/: exportImport.ts  storage.ts
src/resourcecalc/: __init__.py  cli.py
src/resourcecalc/calculators/: capacity.py  cost.py  timeline.py
tests/: test_basic.py
