[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resourcecalc"
version = "0.1.0"
description = "Resource capacity, cost, and timeline calculation toolkit (CLI + library)."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  # Add minimal runtime dependencies here
]

[project.optional-dependencies]
extras = ["python-dateutil>=2.8"]
dev = ["pytest>=8.0"]

[project.scripts]
resourcecalc = "resourcecalc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
